[gd_scene load_steps=23 format=3 uid="uid://dklrwxtbrjp2y"]

[ext_resource type="Script" uid="uid://b31jhjwl2t1hs" path="res://Classes/Projectile/base_projectile.gd" id="1_gr1k4"]
[ext_resource type="Script" uid="uid://bgvbi4djtrhg2" path="res://Classes/stat_sheet.gd" id="2_en3vu"]
[ext_resource type="Script" uid="uid://olgtjjk1ry4u" path="res://Classes/proj_stat_sheet.gd" id="2_fgy4q"]
[ext_resource type="Texture2D" uid="uid://c7sbt2xfinuin" path="res://Assets/sprites/player_sheet.png" id="3_celr6"]
[ext_resource type="Script" uid="uid://xguj3aga2d5m" path="res://Classes/Components/health_component.gd" id="4_vis68"]
[ext_resource type="Script" uid="uid://ckmbl6r4aef7j" path="res://Classes/Components/hitbox_component.gd" id="5_fgy4q"]
[ext_resource type="Script" uid="uid://bmmnvlqmtdoq6" path="res://Classes/State/state_machine.gd" id="6_celr6"]
[ext_resource type="Script" uid="uid://8c23l3np7d80" path="res://Classes/State/projectile_move.gd" id="7_celr6"]
[ext_resource type="Script" uid="uid://dktfc6cudjw6g" path="res://Classes/State/proj_idle.gd" id="8_vis68"]

[sub_resource type="Resource" id="Resource_8edil"]
script = ExtResource("2_fgy4q")
lifetime = 0.2
metadata/_custom_type_script = "uid://olgtjjk1ry4u"

[sub_resource type="Resource" id="Resource_g8oy1"]
script = ExtResource("2_en3vu")
max_health = 1
max_speed = 300.0
acceleration = 20.0
friction = 100.0
jump_height = 100.0
invuln_time = 1.0
metadata/_custom_type_script = "uid://bgvbi4djtrhg2"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jx6rg"]
size = Vector2(4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpggq"]
atlas = ExtResource("3_celr6")
region = Rect2(16, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1edn8"]
atlas = ExtResource("3_celr6")
region = Rect2(32, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsjsl"]
atlas = ExtResource("3_celr6")
region = Rect2(48, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx6rg"]
atlas = ExtResource("3_celr6")
region = Rect2(64, 176, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g8oy1"]
animations = [{
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_vpggq")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_1edn8")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_vsjsl")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_jx6rg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_fgy4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_component/collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_celr6"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_component/collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("state_machine")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["idle", {}],
"method": &"state_change"
}]
}

[sub_resource type="Animation" id="Animation_vis68"]
resource_name = "reset"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_component/collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("state_machine")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["move", {}],
"method": &"state_change"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vis68"]
_data = {
&"RESET": SubResource("Animation_fgy4q"),
&"die": SubResource("Animation_celr6"),
&"reset": SubResource("Animation_vis68")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsjsl"]
size = Vector2(4, 4)

[node name="base_projectile" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_gr1k4")
proj_stats = SubResource("Resource_8edil")
stats = SubResource("Resource_g8oy1")
metadata/_custom_type_script = "uid://b31jhjwl2t1hs"

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_jx6rg")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g8oy1")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.513789

[node name="visiblity" type="VisibleOnScreenEnabler2D" parent="."]
scale = Vector2(0.2, 0.2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vis68")
}

[node name="health_component" type="Node" parent="."]
script = ExtResource("4_vis68")
metadata/_custom_type_script = "uid://xguj3aga2d5m"

[node name="hitbox_component" type="Area2D" parent="." node_paths=PackedStringArray("killer")]
script = ExtResource("5_fgy4q")
killer = NodePath("..")
damage = 1
stun_time = 1.0
metadata/_custom_type_script = "uid://ckmbl6r4aef7j"

[node name="collision" type="CollisionShape2D" parent="hitbox_component"]
shape = SubResource("RectangleShape2D_vsjsl")
debug_color = Color(1, 0, 0, 0.419608)

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_celr6")
initial_state = NodePath("idle")
metadata/_custom_type_script = "uid://bmmnvlqmtdoq6"

[node name="move" type="Node" parent="state_machine"]
script = ExtResource("7_celr6")
metadata/_custom_type_script = "uid://fwd0snk35wo3"

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource("8_vis68")
metadata/_custom_type_script = "uid://fwd0snk35wo3"

[connection signal="lifetime_over" from="." to="AnimationPlayer" method="play" binds= ["die"]]
[connection signal="proj_reset" from="." to="AnimationPlayer" method="play" binds= ["reset"]]
